split html into 3 files, add basic hiding of a lane

--- a/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
+++ b/test/src/main/java/uks/debuggen/interconnect/CityElectricsKassel/classModel.yaml
@@ -31,7 +31,7 @@
   attributes: 	cityElectricsKasselBuilder_model 	cityElectricsKasselBuilder_eventStore 	cityElectricsKasselBuilder_loaderMap 	cityElectricsKasselBuilder_groupStore
   importList: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
   imports: 	"import java.util.LinkedHashMap;" 	"import java.util.function.Consumer;" 	"import uks.debuggen.interconnect.events.*;" 	"import java.util.function.Function;"
-  methods: 	cityElectricsKasselBuilder_outdated 	cityElectricsKasselBuilder_load 	cityElectricsKasselBuilder_initLoaderMap 	cityElectricsKasselBuilder_addToGroup 	cityElectricsKasselBuilder_stripBrackets
+  methods: 	cityElectricsKasselBuilder_outdated 	cityElectricsKasselBuilder_load 	cityElectricsKasselBuilder_initLoaderMap 	cityElectricsKasselBuilder_getVarName 	cityElectricsKasselBuilder_addToGroup 	cityElectricsKasselBuilder_stripBrackets
   model: 	c
   modified: 	false
   name: 	CityElectricsKasselBuilder
@@ -296,6 +296,27 @@ handleDemoChargingRequestedEvent(event);
   paramsString: 	""
   returnType: 	void
   signature: 	"class/CityElectricsKasselBuilder/method/initLoaderMap()"
+
+- cityElectricsKasselBuilder_getVarName: 	org.fulib.classmodel.FMethod
+  annotations: 	""
+  clazz: 	cityElectricsKasselBuilder
+  declaration: 	"public String getVarName(String value)"
+  id: 	CityElectricsKasselBuilder_getVarName
+  methodBody: 	"      if (value == null) {
+         return null;
+      }
+      String[] split = value.split(\"\\s+\");
+      String varName = split[0];
+      for (int i = 1; i < split.length; i++) {
+         varName += org.fulib.StrUtil.cap(split[i]);
+      }
+      return varName;"
+  modified: 	false
+  modifiers: 	public
+  name: 	getVarName
+  paramsString: 	"String value"
+  returnType: 	String
+  signature: 	"class/CityElectricsKasselBuilder/method/getVarName(String)"
 
 - cityElectricsKasselBuilder_addToGroup: 	org.fulib.classmodel.FMethod
   annotations: 	""
