--- a/test/src/test/java/uks/debuggen/party/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/party/classModel.yaml
@@ -9,8 +9,8 @@
 
 - testPartyApp: 	org.fulib.classmodel.Clazz
   attributes: 	testPartyApp_eventBroker
-  importList: 	"import org.junit.Test;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.party.events.*;" 	"import uks.debuggen.party.PartyApp.PartyAppService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
   methods: 	testPartyApp_PartyApp 	testPartyApp_publish
   model: 	c
   modified: 	false
@@ -52,6 +52,7 @@ $(\"body\").shouldHave(text(\"event broker\"));
 
 SelenideElement pre = $(\"pre\");
 pre.shouldHave(text(\"http://localhost:42001/apply\"));
+LinkedHashMap<String, Object> modelMap;
 
 // workflow Overview
 // create UserRegisteredEvent: user registered 12:00
@@ -113,6 +114,11 @@ pre.shouldHave(text(\"- 12_01:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_01:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 
 // page 12:02
 open(\"http://localhost:42001/page/12_02\");
@@ -127,6 +133,11 @@ pre.shouldHave(text(\"- 12_03:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_03:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 
 // page 12:04
 open(\"http://localhost:42001/page/12_04\");
@@ -141,9 +152,14 @@ pre.shouldHave(text(\"- 12_05:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 12_05:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 // check data note 12:05:02
 pre = $(\"#data\");
-pre.shouldHave(text(\"- Alice:\"));
+pre.shouldHave(text(\"- alice:\"));
 pre.shouldHave(matchText(\"name:.*Alice\"));
 pre.shouldHave(matchText(\"email:.*a@b.de\"));
 pre.shouldHave(matchText(\"password:.*secret\"));
@@ -171,6 +187,11 @@ pre.shouldHave(text(\"- 13_01:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_01:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 
 // page 13:02
 open(\"http://localhost:42001/page/13_02\");
@@ -185,6 +206,11 @@ pre.shouldHave(text(\"- 13_03:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 13_03:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 
 // page 13:04
 open(\"http://localhost:42001/page/13_04\");
@@ -211,6 +237,11 @@ pre.shouldHave(text(\"- 14_01:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_01:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 // check data note 14:01:02
 pre = $(\"#data\");
 pre.shouldHave(text(\"- sE_BBQ:\"));
@@ -241,6 +272,11 @@ pre.shouldHave(text(\"- 14_05:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_05:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 // check data note 14:05:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- beer:\"));
@@ -277,6 +313,11 @@ pre.shouldHave(text(\"- 14_09:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 14_09:\"));
+for (DataEvent dataEvent : partyApp.getBuilder().getEventStore().values()) {
+   partyApp.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = partyApp.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 // check data note 14:09:01
 pre = $(\"#data\");
 pre.shouldHave(text(\"- meat:\"));
