--- a/test/src/test/java/uks/debuggen/interconnect/classModel.yaml
+++ b/test/src/test/java/uks/debuggen/interconnect/classModel.yaml
@@ -9,8 +9,8 @@
 
 - testInterconnect: 	org.fulib.classmodel.Clazz
   attributes: 	testInterconnect_eventBroker
-  importList: 	"import org.junit.Test;" 	"import uks.debuggen.interconnect.events.*;" 	"import uks.debuggen.interconnect.IonicKassel42.IonicKassel42Service;" 	"import uks.debuggen.interconnect.CityElectricsKassel.CityElectricsKasselService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
-  imports: 	"import org.junit.Test;" 	"import uks.debuggen.interconnect.events.*;" 	"import uks.debuggen.interconnect.IonicKassel42.IonicKassel42Service;" 	"import uks.debuggen.interconnect.CityElectricsKassel.CityElectricsKasselService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  importList: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.interconnect.events.*;" 	"import uks.debuggen.interconnect.IonicKassel42.IonicKassel42Service;" 	"import uks.debuggen.interconnect.CityElectricsKassel.CityElectricsKasselService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
+  imports: 	"import org.junit.Test;" 	"import java.util.LinkedHashMap;" 	"import uks.debuggen.interconnect.events.*;" 	"import uks.debuggen.interconnect.IonicKassel42.IonicKassel42Service;" 	"import uks.debuggen.interconnect.CityElectricsKassel.CityElectricsKasselService;" 	"import org.fulib.yaml.Yaml;" 	"import com.mashape.unirest.http.HttpResponse;" 	"import com.mashape.unirest.http.Unirest;" 	"import com.mashape.unirest.http.exceptions.UnirestException;" 	"import static com.codeborne.selenide.Selenide.open;" 	"import static com.codeborne.selenide.Selenide.$;" 	"import static com.codeborne.selenide.Condition.text;" 	"import static com.codeborne.selenide.Condition.matchText;" 	"import com.codeborne.selenide.SelenideElement;"
   methods: 	testInterconnect_Interconnect 	testInterconnect_publish
   model: 	c
   modified: 	false
@@ -57,6 +57,7 @@ $(\"body\").shouldHave(text(\"event broker\"));
 SelenideElement pre = $(\"pre\");
 pre.shouldHave(text(\"http://localhost:42001/apply\"));
 pre.shouldHave(text(\"http://localhost:42002/apply\"));
+LinkedHashMap<String, Object> modelMap;
 
 // workflow Overview
 // workflow UniKasselIonicCharger
@@ -73,11 +74,21 @@ pre.shouldHave(text(\"- 11_55:\"));
 open(\"http://localhost:42001\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 11_55:\"));
+for (DataEvent dataEvent : ionicKassel42.getBuilder().getEventStore().values()) {
+   ionicKassel42.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = ionicKassel42.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42001\");
 
 // check CityElectricsKassel
 open(\"http://localhost:42002\");
 pre = $(\"#history\");
 pre.shouldHave(text(\"- 11_55:\"));
+for (DataEvent dataEvent : cityElectricsKassel.getBuilder().getEventStore().values()) {
+   cityElectricsKassel.getBuilder().load(dataEvent.getBlockId());
+}
+modelMap = cityElectricsKassel.getBuilder().getModel().getModelMap();
+open(\"http://localhost:42002\");
 
 System.out.println();
 "
